# rubic_cube_simulator

./: CMakeLists.txt  README.md  a.out  backup.cpp  main.cpp
include/: config.hpp  lib.hpp
